# LasecSimul

./: .gitignore  CUsersJOSUEM~1AppDataLocalTempclaudec--SourceCode-LasecSimul36d7c1e7-c4ba-4643-9919-9b7f00649996scratchpadcatalog_dump.txt  README.md  package.json
.codex-validation/: controlled-source-closeup.html  generate-controlled-source-closeup.mjs  generate-lote-1-gnd-evidence.mjs  generate-lote-2-fixedvolt-evidence.mjs  generate-lote-fontes-v2-evidence.mjs  generate-lote-keypad-evidence.mjs  generate-lote-medidores-v1-evidence.mjs  generate-lote-microcontroladores-evidence.mjs  generate-lote-subcircuit-devkitc-evidence.mjs  lote-1-gnd-evidence.html  lote-2-fixedvolt-evidence.html  lote-fontes-evidence.html  lote-fontes-evidence.json  lote-fontes-v2-evidence.html  lote-fontes-v2-evidence.json  lote-keypad-evidence.html  lote-keypad-evidence.json  lote-medidores-v1-evidence.html  lote-medidores-v1-evidence.json  lote-microcontroladores-evidence.html  lote-microcontroladores-evidence.json  lote-passivos-basicos-evidence.html  lote-passivos-basicos-evidence.json  lote-subcircuit-devkitc-evidence.html  lote-subcircuit-devkitc-evidence.json  qt-parser-fontes-v2.json  render-audit.json  simulide-fidelity.html  validate-lote-1-gnd.mjs  validate-lote-2-fixedvolt.mjs
.skill/: lasecsimul.skill
.spec/: lasecsimul-native-devices.spec  lasecsimul-subcircuits.spec  lasecsimul.spec
core/: CMakeLists.txt
core/benchmark/: simulation_performance_benchmark.cpp  solver_benchmark.cpp  transient_benchmark.cpp
core/include/lasecsimul/: IComponentModel.hpp  IMcuAdapter.hpp  PropertyDefinition.hpp  QemuModule.hpp  Sha256.hpp  Signal.hpp  Transient.hpp  Types.hpp  device_abi.h  mcu_abi.h  qemu_arena_abi.h
core/src/: main.cpp
core/src/app/: CoreApplication.cpp
core/src/components/: SimulideBuiltins.hpp
core/src/components/active/: AnalogMux.hpp  Comparator.hpp  Diode.hpp  DiodeLegArray.hpp  OpAmp.hpp
core/src/components/connectors/: Bus.hpp
core/src/components/logic/: Button.hpp
core/src/components/meters/: Ampmeter.hpp  FreqMeter.hpp  InstrumentTunnels.hpp  LogicAnalyzer.hpp  Oscope.hpp  Probe.hpp  Voltmeter.hpp
core/src/components/outputs/: StepperWindings.hpp
core/src/components/passive/: Capacitor.hpp  Inductor.hpp  Resistor.hpp  ResistorArray.hpp
core/src/components/sources/: Battery.hpp  Clock.hpp  Csource.hpp  CurrSource.hpp  DcVoltageSource.hpp  FixedVolt.hpp  Rail.hpp  VoltSource.hpp  WaveGen.hpp
core/src/components/switches/: Keypad.hpp
core/src/ipc/: IpcServer.cpp  IpcServer.hpp  Protocol.hpp
core/src/mcu/: McuComponent.cpp  McuComponent.hpp  McuController.cpp  McuController.hpp
core/src/mcu/qemu/: QemuArenaBridge.cpp  QemuArenaBridge.hpp  QemuIcountCalibrator.cpp  QemuIcountCalibrator.hpp  QemuProcessManager.cpp
core/src/plugins/: CrashGuard.hpp  GlobalPluginCache.hpp  NativeDeviceProxy.cpp  NativeDeviceProxy.hpp  NativeMcuAdapterProxy.cpp  NativeMcuAdapterProxy.hpp  PluginLoader.cpp  PluginLoader.hpp  PluginRuntime.cpp  QemuModuleProxy.hpp
core/src/registry/: ComponentMetadataRegistry.hpp  ComponentParams.hpp  McuRegistry.hpp  PropertyJson.hpp  SubcircuitRegistry.hpp
core/src/session/: PauseExpression.cpp  PauseExpression.hpp  SimulationSession.cpp  SimulationSession.hpp
core/src/simulation/: CircuitGroup.hpp  ComponentMatrixView.hpp  MnaSolver.hpp  Netlist.hpp  Scheduler.cpp  Scheduler.hpp  ThreadPool.hpp
core/test/: bus_test.cpp  circuit_group_reuse_test.cpp  command_queue_session_test.cpp  component_removal_test.cpp  diode_test.cpp  esp32_devkitc_subcircuit_test.cpp  inert_components_fix_test.cpp  logic_analyzer_vector_test.cpp  logic_gate_plugin_test.cpp  pause_expression_test.cpp  probe_pause_on_change_test.cpp  property_definition_test.cpp  sha256_test.cpp  simulide_sources_meters_test.cpp  subcircuit_test.cpp  transient_rc_test.cpp  transient_rlc_test.cpp  voltmeter_test.cpp  zener_led_test.cpp
core/test/core/: CoreBootstrapTest.cpp
core/test/core/mcu/: Esp32AdapterTest.cpp  McuBlinkLongRunTest.cpp  McuComponentLivePollThreadTest.cpp  McuComponentTest.cpp  McuControllerRealQemuTest.cpp  McuDebugLaunchTest.cpp  McuFirmwareLasecPlotTest.cpp  McuMultipleControllersRealQemuTest.cpp  McuRestartStressTest.cpp  McuSchedulerPacingSyncTest.cpp  McuUartToLasecPlotTest.cpp  McuUsartMonitorTest.cpp  QemuArenaBridgeTest.cpp  QemuIcountCalibratorTest.cpp  QemuProcessManagerTest.cpp  QemuQueueStressTest.cpp  SessionRestartStressTest.cpp
core/test/core/plugins/: McuCrashResilienceTest.cpp  PluginChecksumTest.cpp  PluginDuplicateDeviceIdTest.cpp  PluginRuntimeTest.cpp
core/test/fixtures/: bootstrap-test-library.json
devices/: library.json
devices/simulide-peripherals/: CMakeLists.txt  ds1307.json  ds1307.lsdevice  esp01.json  esp01.lsdevice  ky023.json  ky023.lsdevice  ky040.json  ky040.lsdevice  lasecplot.lsdevice  sdcard.json  sdcard.lsdevice  serialport.json  serialport.lsdevice  serialterm.json  serialterm.lsdevice  touchpad.json  touchpad.lsdevice
devices/simulide-peripherals/src/: lib.c
devices/simulide-sensors/: CMakeLists.txt  dht22.json  dht22.lsdevice  ds1621.json  ds1621.lsdevice  ds18b20.json  ds18b20.lsdevice  ldr.json  ldr.lsdevice  rtd.json  rtd.lsdevice  sr04.json  sr04.lsdevice  strain.json  strain.lsdevice  thermistor.json  thermistor.lsdevice
devices/simulide-sensors/src/: lib.c
docs/: 00-visao-geral.md  05-contratos-e-interfaces.md  07-extension-typescript.md  08-ui-webview.md  11-qemu-esp32.md  12-plugins-nativos.md  15-taxonomia-paleta.md  16-roadmap-pendencias-spec.md  17-modos-de-rede-esp32.md  17-pendencias-pos-sessao-qemu-abi.md  18-guia-dispositivo-abi-e-mcu-qemu.md  19-empacotamento-e-instaladores.md  20-diagnostico-renderizacao-simulide.md  21-handoff-auditoria-61-achados.md  21-integracao-lasecplot.md  22-auditoria-ui-webview-extension-2026-07-07.md  23-auditoria-pente-fino-2026-07-08.md  24-itens-menor-prioridade-2026-07-09.md  27-debug-firmware-qemu-vscode.md  (+14 more)
mcu-adapters/espressif-esp32/: CMakeLists.txt  device.lsconfig  mcu.json  mcu.lsdevice
mcu-adapters/espressif-esp32/src/: Esp32Adapter.cpp
(+422 files in other folders)
