cmake_minimum_required(VERSION 3.20)
project(SimulideSensors C)

add_library(device SHARED src/lib.c)
target_include_directories(device PRIVATE ${CMAKE_SOURCE_DIR}/../../core/include)
set_target_properties(device PROPERTIES C_VISIBILITY_PRESET hidden PREFIX "")
if(WIN32 AND NOT MSVC)
    target_compile_options(device PRIVATE -fno-stack-protector)
    target_link_options(device PRIVATE -nostdlib -nodefaultlibs)
    target_link_libraries(device PRIVATE kernel32)
endif()
